k8s/base/external-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-external
  namespace: microservices
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "false"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 443
    targetPort: 80
    name: https
  selector:
    app: api-gateway
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-external
  namespace: microservices
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "false"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 4173
    name: http
  - port: 443
    targetPort: 4173
    name: https
  selector:
    app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: minio-external
  namespace: microservices
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "false"
spec:
  type: LoadBalancer
  ports:
  - port: 9000
    targetPort: 9000
    name: api
  - port: 9001
    targetPort: 9001
    name: console
  selector:
    app: minio
---
apiVersion: v1
kind: Service
metadata:
  name: content-service-external
  namespace: microservices
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "false"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 443
    targetPort: 80
    name: https
  selector:
    app: content-service
---
apiVersion: v1
kind: Service
metadata:
  name: media-service-external
  namespace: microservices
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "false"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 443
    targetPort: 80
    name: https
  selector:
    app: media-service
